// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ModelStatsDisplay /> > should display a single model correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                                                      │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    1                                                                   │
│  Errors                      0 (0.0%)                                                            │
│  Avg Latency                 100ms                                                               │
│  Tokens                                                                                          │
│  Total                       30                                                                  │
│    ↳ Input                   5                                                                   │
│    ↳ Cache Reads             5 (50.0%)                                                           │
│    ↳ Thoughts                2                                                                   │
│    ↳ Tool                    1                                                                   │
│    ↳ Output                  20                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should display conditional rows if at least one model has data 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                   gemini-2.5-flash                   │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    1                                1                                  │
│  Errors                      0 (0.0%)                         0 (0.0%)                           │
│  Avg Latency                 100ms                            50ms                               │
│  Tokens                                                                                          │
│  Total                       30                               15                                 │
│    ↳ Input                   5                                5                                  │
│    ↳ Cache Reads             5 (50.0%)                        0 (0.0%)                           │
│    ↳ Thoughts                2                                0                                  │
│    ↳ Tool                    0                                3                                  │
│    ↳ Output                  20                               10                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should display role breakdown correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                                                      │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    2                                                                   │
│  Errors                      0 (0.0%)                                                            │
│  Avg Latency                 100ms                                                               │
│  Tokens                                                                                          │
│  Total                       70                                                                  │
│    ↳ Input                   20                                                                  │
│    ↳ Cache Reads             10 (33.3%)                                                          │
│    ↳ Output                  40                                                                  │
│  Roles                                                                                           │
│  main                                                                                            │
│    ↳ Requests                1                                                                   │
│    ↳ Input                   10                                                                  │
│    ↳ Output                  20                                                                  │
│    ↳ Cache Reads             5                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should display stats for multiple models correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                   gemini-2.5-flash                   │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    10                               20                                 │
│  Errors                      1 (10.0%)                        2 (10.0%)                          │
│  Avg Latency                 100ms                            25ms                               │
│  Tokens                                                                                          │
│  Total                       300                              600                                │
│    ↳ Input                   50                               100                                │
│    ↳ Cache Reads             50 (50.0%)                       100 (50.0%)                        │
│    ↳ Thoughts                10                               20                                 │
│    ↳ Tool                    5                                10                                 │
│    ↳ Output                  200                              400                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should filter out invalid role names 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                                                      │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    1                                                                   │
│  Errors                      0 (0.0%)                                                            │
│  Avg Latency                 100ms                                                               │
│  Tokens                                                                                          │
│  Total                       30                                                                  │
│    ↳ Input                   10                                                                  │
│    ↳ Output                  20                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should handle large values without wrapping or overlapping 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                                                      │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    999,999,999                                                         │
│  Errors                      123,456,789 (12.3%)                                                 │
│  Avg Latency                 0ms                                                                 │
│  Tokens                                                                                          │
│  Total                       999,999,999                                                         │
│    ↳ Input                   864,197,532                                                         │
│    ↳ Cache Reads             123,456,789 (12.5%)                                                 │
│    ↳ Thoughts                111,111,111                                                         │
│    ↳ Tool                    222,222,222                                                         │
│    ↳ Output                  123,456,789                                                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should handle long role name layout 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                                                      │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    1                                                                   │
│  Errors                      0 (0.0%)                                                            │
│  Avg Latency                 100ms                                                               │
│  Tokens                                                                                          │
│  Total                       30                                                                  │
│    ↳ Input                   10                                                                  │
│    ↳ Output                  20                                                                  │
│  Roles                                                                                           │
│  utility_loop_detector                                                                           │
│    ↳ Requests                1                                                                   │
│    ↳ Input                   10                                                                  │
│    ↳ Output                  20                                                                  │
│    ↳ Cache Reads             0                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should handle models with long names (gemini-3-*-preview) without layout breaking 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────╮
│                                                                              │
│  Auto (Gemini 3) Stats For Nerds                                             │
│                                                                              │
│                                                                              │
│  Metric                      gemini-3-pro-preview   gemini-3-flash-preview   │
│  ──────────────────────────────────────────────────────────────────────────  │
│  API                                                                         │
│  Requests                    10                     20                       │
│  Errors                      0 (0.0%)               0 (0.0%)                 │
│  Avg Latency                 200ms                  50ms                     │
│  Tokens                                                                      │
│  Total                       6,000                  12,000                   │
│    ↳ Input                   1,000                  2,000                    │
│    ↳ Cache Reads             500 (25.0%)            1,000 (25.0%)            │
│    ↳ Thoughts                100                    200                      │
│    ↳ Tool                    50                     100                      │
│    ↳ Output                  4,000                  8,000                    │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should not display conditional rows if no model has data for them 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-2.5-pro                                                      │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    1                                                                   │
│  Errors                      0 (0.0%)                                                            │
│  Avg Latency                 100ms                                                               │
│  Tokens                                                                                          │
│  Total                       30                                                                  │
│    ↳ Input                   10                                                                  │
│    ↳ Output                  20                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should render "no API calls" message when there are no active models 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  No API calls have been made in this session.                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`<ModelStatsDisplay /> > should resolve gemini-3-flash to gemini-3.5-flash via getDisplayString 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  Model Stats For Nerds                                                                           │
│                                                                                                  │
│                                                                                                  │
│  Metric                      gemini-3.5-flash                                                    │
│  ──────────────────────────────────────────────────────────────────────────────────────────────  │
│  API                                                                                             │
│  Requests                    1                                                                   │
│  Errors                      0 (0.0%)                                                            │
│  Avg Latency                 100ms                                                               │
│  Tokens                                                                                          │
│  Total                       30                                                                  │
│    ↳ Input                   5                                                                   │
│    ↳ Cache Reads             5 (50.0%)                                                           │
│    ↳ Thoughts                2                                                                   │
│    ↳ Tool                    1                                                                   │
│    ↳ Output                  20                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
